[package]
name = "comm_service"
version = "0.1.2"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
error-chain = "0.10"
futures = "0.1"
futures-cpupool = "=0.1.3"
hyper = { version = "0.10", default-features = false }
log = "0.3"
log4rs = "0.6"
regex = "0.2"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.0"
structopt-derive = "0.0"
tokio-timer = "0.1"
url = "1.4"
