[package]
name = "comm_service"
version = "0.1.2"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
error-chain = "0.10.0"
futures = "0.1.14"
futures-cpupool = "0.1.5"
hyper = { version = "0.10", default-features = false }
log = "0.3.0"
log4rs = "0.7.0"
regex = "0.2.2"
rocket = "0.3.0"
rocket_codegen = "0.3.0"
rocket_contrib = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.0.5"
structopt-derive = "0.0.5"
tokio-timer = "0.1.2"
url = "1.5"
